--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -106,6 +106,13 @@ jobs:
           echo "::set-output name=version::$($xml.project.parent.version)"
           echo "::set-output name=class::$($xml.project.build.plugins.plugin.executions.execution.configuration.transformers.transformer.mainClass)"
         shell: pwsh
+      - name: Set tags
+        id: version
+        run: |
+          if [ ${{ steps.info.outputs.version }} != *"SNAPSHOT"* ]
+          then
+            echo "::set-output name=latestTag::'latest'"
+          fi
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
       - name: Generate Docker metadata
@@ -118,6 +125,7 @@ jobs:
           # We use raw because our release process is not done on tag push (yet)
           tags: |
             type=raw,value=${{ steps.info.outputs.version }}
+            type=raw,value=${{ steps.info.version.latestTag }},enable=${{ !contains(steps.info.outputs.version, 'SNAPSHOT') }}
           labels: |
             org.opencontainers.image.title=siembol-${{ matrix.component }}
       - name: Build and export Docker image
@@ -173,6 +181,13 @@ jobs:
           [xml]$xml = Get-Content ./*/${{ matrix.component}}/pom.xml
           echo "::set-output name=version::$($xml.project.parent.version)"
         shell: pwsh
+      - name: Set tags
+        id: version
+        run: |
+          if [ ${{ steps.info.outputs.version }} != *"SNAPSHOT"* ]
+          then
+            echo "::set-output name=latestTag::'latest'"
+          fi
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
       - name: Generate Docker metadata
@@ -185,6 +200,7 @@ jobs:
           # We use raw because our release process is not done on tag push (yet)
           tags: |
             type=raw,value=${{ steps.info.outputs.version }}
+            type=raw,value=${{ steps.info.version.latestTag }},enable=${{ !contains(steps.info.outputs.version, 'SNAPSHOT') }}
           labels: |
             org.opencontainers.image.title=siembol-${{ matrix.component }}
       - name: Build and export Docker image
@@ -264,6 +280,13 @@ jobs:
       - name: Get version
         id: info
         run: echo "::set-output name=version::$(jq -r .appVersion deployment/docker/config-editor-ui/assets/build-info.json)"
+      - name: Set tags
+        id: version
+        run: |
+          if [ ${{ steps.info.outputs.version }} != *"dev"* ]
+          then
+            echo "::set-output name=latestTag::'latest'"
+          fi
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
       - name: Generate Docker metadata
@@ -276,8 +299,10 @@ jobs:
           # We use raw because our release process is not done on tag push (yet)
           tags: |
             type=raw,value=${{ steps.info.outputs.version }}
+            type=raw,value=${{ steps.info.version.latestTag }},enable=${{ !contains(steps.info.outputs.version, 'dev') }}
           labels: |
             org.opencontainers.image.title=siembol-config-editor-ui
+
       - name: Build and export Docker image
         uses: docker/build-push-action@v2
         with:
