--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -286,6 +286,8 @@ jobs:
           if [ ${{ steps.info.outputs.version }} != *"dev"* ]
           then
             echo "::set-output name=latestTag::'latest'"
+          else
+            echo "::set-output name=latestTag::'SNAPSHOT'"
           fi
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
