--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -125,7 +125,7 @@ jobs:
           # We use raw because our release process is not done on tag push (yet)
           tags: |
             type=raw,value=${{ steps.info.outputs.version }}
-            type=raw,value=${{ steps.info.version.latestTag }},enable=${{ !contains(steps.info.outputs.version, 'SNAPSHOT') }}
+            type=raw,value=${{ steps.info.version.latestTag }},enable=${{ !endsWith(steps.info.outputs.version, '-SNAPSHOT') }}
           labels: |
             org.opencontainers.image.title=siembol-${{ matrix.component }}
       - name: Build and export Docker image
@@ -200,7 +200,7 @@ jobs:
           # We use raw because our release process is not done on tag push (yet)
           tags: |
             type=raw,value=${{ steps.info.outputs.version }}
-            type=raw,value=${{ steps.info.version.latestTag }},enable=${{ !contains(steps.info.outputs.version, 'SNAPSHOT') }}
+            type=raw,value=${{ steps.info.version.latestTag }},enable=${{ !endsWith(steps.info.outputs.version, '-SNAPSHOT') }}
           labels: |
             org.opencontainers.image.title=siembol-${{ matrix.component }}
       - name: Build and export Docker image
@@ -301,7 +301,7 @@ jobs:
           # We use raw because our release process is not done on tag push (yet)
           tags: |
             type=raw,value=${{ steps.info.outputs.version }}
-            type=raw,value=${{ steps.info.version.latestTag }},enable=${{ !contains(steps.info.outputs.version, 'dev') }}
+            type=raw,value=${{ steps.info.version.latestTag }},enable=${{ !endsWith(steps.info.outputs.version, '-dev') }}
           labels: |
             org.opencontainers.image.title=siembol-config-editor-ui
 
