--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -106,15 +106,6 @@ jobs:
           echo "::set-output name=version::$($xml.project.parent.version)"
           echo "::set-output name=class::$($xml.project.build.plugins.plugin.executions.execution.configuration.transformers.transformer.mainClass)"
         shell: pwsh
-      - name: Set latest tags
-        id: version
-        run: |
-          if [ ${{ endsWith(steps.info.outputs.version, '-SNAPSHOT') }} ]
-          then
-            echo "::set-output name=latestTag::snapshot"
-          else
-            echo "::set-output name=latestTag::latest"
-          fi
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
       - name: Generate Docker metadata
@@ -123,11 +114,11 @@ jobs:
         with:
           images: gresearchdev/siembol-${{ matrix.component }}
           flavor: |
-            latest=false
+            latest=${{ !endsWith(steps.info.outputs.version, 'SNAPSHOT') }}
           # We use raw because our release process is not done on tag push (yet)
           tags: |
             type=raw,value=${{ steps.info.outputs.version }}
-            type=raw,value=${{ steps.version.outputs.latestTag }}
+            type=raw,value=SNAPSHOT,enable=${{ endsWith(steps.info.outputs.version, 'SNAPSHOT') }}
           labels: |
             org.opencontainers.image.title=siembol-${{ matrix.component }}
       - name: Build and export Docker image
@@ -183,15 +174,6 @@ jobs:
           [xml]$xml = Get-Content ./*/${{ matrix.component}}/pom.xml
           echo "::set-output name=version::$($xml.project.parent.version)"
         shell: pwsh
-      - name: Set latest tags
-        id: version
-        run: |
-          if [ ${{ endsWith(steps.info.outputs.version, '-SNAPSHOT') }} ]
-          then
-            echo "::set-output name=latestTag::snapshot"
-          else
-            echo "::set-output name=latestTag::latest"
-          fi
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
       - name: Generate Docker metadata
@@ -200,11 +182,11 @@ jobs:
         with:
           images: gresearchdev/siembol-${{ matrix.component }}
           flavor: |
-            latest=${{ github.ref == 'refs/heads/master' }}
+            latest=${{ !endsWith(steps.info.outputs.version, 'SNAPSHOT') }}
           # We use raw because our release process is not done on tag push (yet)
           tags: |
             type=raw,value=${{ steps.info.outputs.version }}
-            type=raw,value=${{ steps.version.outputs.latestTag }}
+            type=raw,value=SNAPSHOT,enable=${{ endsWith(steps.info.outputs.version, 'SNAPSHOT') }}
           labels: |
             org.opencontainers.image.title=siembol-${{ matrix.component }}
       - name: Build and export Docker image
@@ -283,16 +265,7 @@ jobs:
           path: deployment/docker/config-editor-ui
       - name: Get version
         id: info
-        run: echo "::set-output name=info::$(jq -r .appVersion deployment/docker/config-editor-ui/assets/build-info.json)"
-      - name: Set tags
-        id: version
-        run: |
-          if [ ${{ endsWith(steps.info.outputs.info, '-dev') }} ]
-          then
-            echo "::set-output name=latestTag::snapshot"
-          else
-            echo "::set-output name=latestTag::latest"
-          fi
+        run: echo "::set-output name=version::$(jq -r .appVersion deployment/docker/config-editor-ui/assets/build-info.json)"
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
       - name: Generate Docker metadata
@@ -301,11 +274,11 @@ jobs:
         with:
           images: gresearchdev/siembol-config-editor-ui
           flavor: |
-            latest=${{ github.ref == 'refs/heads/master' }}
+            latest=${{ !endsWith(steps.info.outputs.version, 'dev') }}
           # We use raw because our release process is not done on tag push (yet)
           tags: |
-            type=raw,value=${{ steps.info.outputs.info }} 
-            type=raw,value=${{ steps.version.outputs.latestTag }}
+            type=raw,value=${{ steps.info.outputs.version }}
+            type=raw,value=SNAPSHOT,enable=${{ endsWith(steps.info.outputs.version, 'dev') }}
           labels: |
             org.opencontainers.image.title=siembol-config-editor-ui
 
