--- a/config-editor/config-editor-ui/package.json
+++ b/config-editor/config-editor-ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rule-editor.ui",
-  "version": "1.3.0-dev",
+  "version": "1.3.0",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
