test new structure

--- a/.github/workflows/siembol-charts.yaml
+++ b/.github/workflows/siembol-charts.yaml
@@ -44,22 +44,8 @@ jobs:
           GH_WORKFLOW: "publish-charts.yaml" # workflow to execute 
           GH_CHART_REPO: "ljubon/charts" # owner/repo where charts are published 
           GH_PAGES_BRANCH: "WIP-refactor-gh-pages" # gh-pages
-          REPO: "ljubon/siembol" # Repository from where we want to build Charts
-          REPO_REF: ${GITHUB_REF##*/} # The branch/tag that triggered the workflow
-          CurrentChartVersion: "0.1.5" # Chart version set in `Chart.yaml`. Default: `LATEST`
-          REPO_CHART: |
-            '{
-              "include": [
-                {
-                  "chart": "siembol",
-                  "src_path": "deployment/helm-k8s/",
-                  "dst_path": "siembol/"
-                }
-              ]
-            }'
         run: |
-          gh workflow run ${{ env.GH_WORKFLOW }} --repo ${{ env.GH_CHART_REPO }} --ref ${{ env.GH_PAGES_BRANCH }} \
-            --field repo=${{ env.REPO }} \
-            --field repo_ref=${{ env.REPO_REF }} \
-            --field currentChartVersion=${{ env.CurrentChartVersion }} \
-            --field repo_chart=${{ env.REPO_CHART }}
+          gh workflow run ${{ env.GH_WORKFLOW }} \
+          --repo ${{ env.GH_CHART_REPO }} \
+          --ref ${{ env.GH_PAGES_BRANCH }} \
+          --json ./chart.yaml
